texi2html/test/invalid/res_all/texi_macro_call_not_closed/macro_call_not_closed.texi
\input texinfo @c -*-texinfo-*-

@macro macro1 { arg1 , arg2 }
result: @emph{\arg1\} protected \\ -> \\arg1\\ @emph{\arg2\}
@end macro 

@node Top

after end macro



